fixed spacing to match

--- a/sites/bizbash/server/styles/index.scss
+++ b/sites/bizbash/server/styles/index.scss
@@ -443,6 +443,7 @@ body {
   & .input-wrapper {
     width: 100%;
     padding: .25rem;
+    margin-bottom: 1.5rem;
     background-color: $gray-200;
     & .form-control {
       width: 100%;
